[tool.poetry]
name = "api-pb"
version = "0.1.0"
description = ""
authors = ["Revuka Oleksandr <a.revuka@gmail.com>"]
readme = "README.md"
packages = [{include = "api_pb"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"
aiohttp = "^3.8.5"
prettytable = "^3.8.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
mypy = "^1.4.1"
black = "^23.3.0"
coverage = "^7.2.7"
pre-commit = "^3.3.3"
pyupgrade = "^3.7.0"
ruff = "^0.0.275"
rich = "^13.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 130